# todo-platform

./: .env.docker  .gitignore  AGENTS.md  CLAUDE.md  Hackathon_II_Todo_Spec_Driven_Development.md  SPECIFYPLUS_SUMMARY.md  main.py  phase2.md  phase3.md  phase4.md  pyproject.toml  render.yaml
.claude/: settings.local.json
.claude/skills/better-auth-jwt-generator/: SKILL.md
.claude/skills/docker-blueprint/: SKILL.md
.specify/memory/: constitution.md
agents/mcp-server/: .env.example  db.py  models.py  pyproject.toml  requirements.txt  server.py  test_tools.py
backend/: .env.example  .gitignore  CLAUDE.md  agent.py  chatkit_server.py  conftest.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/api/: index.py
backend/middleware/: auth.py
backend/routes/: chat.py  chatkit.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_models.py  test_routes.py
frontend/: CLAUDE.md  package-lock.json  package.json  proxy.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AddTaskForm.tsx  AuthGuard.tsx  EditTaskModal.tsx  TaskItem.tsx  TaskList.tsx
frontend/context/: TaskContext.tsx
frontend/lib/: api.ts  auth-client.ts  auth-schema.ts  auth.ts  data.ts  theme.tsx  types.ts  utils.ts
frontend/types/: task.ts
k8s/: docker-compose.yml
k8s/backend/: .dockerignore  Dockerfile
k8s/frontend/: .dockerignore  Dockerfile
k8s/mcp-server/: .dockerignore  Dockerfile
src/: __init__.py  main.py
src/cli/: __init__.py  handlers.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_service.py
tests/: test_cli_handlers.py  test_task_model.py  test_task_service.py  test_task_store.py
(+134 files in other folders)
