[project]
name = "todo-platform"
version = "0.1.0"
description = "Todo In-Memory Console App — Phase I Hackathon II"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
